deploy/k8s/project/ingress-to-istio/ingressgateway.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: istio-ingressgateway
  labels:
    run: istio-ingressgateway
  annotations:
    note: "kubernetes ingress 與 istio ingess 同時存在時，可以暫時把ingress連線導向到istio的ingress"
subsets:
  - addresses:
      # 填入 istio ingress 的 endpoint ip
      # kubectl get endpoints -n istio-system | grep istio-ingressgateway
      - ip: "填入 istio-ingressgateway ip"
    ports:
      - name: https
        port: 8443
        protocol: TCP
      - name: status-port
        port: 15021
        protocol: TCP
      - name: tls
        port: 15443
        protocol: TCP
      - name: http2
        port: 8080
        protocol: TCP
      - name: tcp
        port: 31400
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  labels:
    run: istio-ingressgateway
spec:
  type: ClusterIP
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: tcp
      port: 31400
      protocol: TCP
      targetPort: 31400
    - name: tls
      port: 15443
      protocol: TCP
      targetPort: 15443
