deploy/k8s/project/ingress-to-istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gola-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: istio-ingressgateway
              servicePort: 80
